--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,3 @@
-{"extra": {
-        "heroku": {
-            "document-root": "public",
-            "index": "index.php"
-        }
-    }}
+{
+        "root":"/"
+}
